--- a/3-remastered/src/index.css
+++ b/3-remastered/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #374151;
+  color: #f8fafc;
 }
 
 code {
